Fixes to blockquote and cite styling
Lists in blockquote didn't look balanced with such a big left margin.
Reducing that one.
Longer blockquotes look better with some top and bottom padding. Had to
reduce the last child's bottom margin for that.
Adding styling for the CITE element in blockquotes.
Correcting styling for CODE elements inside lists.

--- a/css/_post-content.scss
+++ b/css/_post-content.scss
@@ -10,7 +10,13 @@
 	line-height: 150%;
 	margin: 0 0 1.1rem;
 
-	code {
+	img {
+		margin: 10px 0;
+	}
+}
+
+p, blockquote, li {
+	> code {
 		border: 1px solid #C9C9C9;
 		background: #EEE;
 		border-radius: 3px;
@@ -18,18 +24,29 @@
 		padding: .1rem .4rem;
 		white-space: nowrap;
 	}
-
-	img {
-		margin: 10px 0;
-	}
 }
 
 blockquote {
 	border-left: 4px solid #C9C9C9;
-	color: lighten(#000, 10%);
-	font-style: italic;
+	color: lighten(#000, 15%);
 	margin: 18px 0 18px 15px;
-	padding-left: 10px;
+	padding: 5px 0 6px 10px;
+
+	> *:last-child {
+		margin-bottom: 0;
+	}
+
+	ol, ul {
+		margin: 0 0 1.2rem 5px;
+	}
+
+	cite {
+		font-style: italic;
+
+		&:before {
+			content: "\2014  ";
+		}
+	}
 }
 
 strong {
@@ -45,7 +62,6 @@ a {
 }
 
 ol, ul {
-	margin: 0 0 1.2rem 15px;
 	position: relative;
 	
 	> li {
@@ -53,6 +69,10 @@ ol, ul {
 		line-height: 140%;
 		margin: 0 0 .4rem 15px;
 	}
+}
+
+> ol, > ul {
+	margin: 0 0 1.2rem 15px;
 }
 
 ol {
